Add fontawesome; add first template for adding ColumnFamily fields; CassandraService using IF NOT EXISTS on keyspace creation

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,7 @@
     <title>{% block title %}CasMin{% endblock %}</title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.min.css') }}" />
 
         {% stylesheets 'bundles/app/css/*' filter='cssrewrite' %}
         <link rel="stylesheet" href="{{ asset_url }}" />
