Dynamically generating ColumnFamily forms

--- a/src/AppBundle/Resources/views/keyspaces/index.html.twig
+++ b/src/AppBundle/Resources/views/keyspaces/index.html.twig
@@ -102,7 +102,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success processModalButton" data-target="{{ path('keyspaces_add') }}">Add Keyspace</button>
+                    <button type="button" class="btn btn-success processQueryModalButton" data-target="{{ path('keyspaces_add') }}">Add Keyspace</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
