--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,9 +72,33 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<div class="modal fade" id="executeQueryModal" tabindex="-1" role="dialog" data-target="{{ path('api_execute') }}">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Execute query</h4>
+            </div>
+            <div class="modal-body">
+                <pre class="query"></pre>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-warning executeQueryModalButton">Execute</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 {% block javascripts %}
     <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+
+    <script type="text/javascript">
+        var cluster = '{{ app.request.get('cluster') ?: '' }}';
+        var keyspace = '{{ app.request.get('keyspace') ?: '' }}';
+    </script>
 
     {% javascripts '@AppBundle/Resources/public/js/*' %}
     <script src="{{ asset_url }}"></script>
