--- a/src/AppBundle/Resources/views/columns/index.html.twig
+++ b/src/AppBundle/Resources/views/columns/index.html.twig
@@ -42,22 +42,29 @@
                                 <td>{{ column.component_index }}</td>
                                 <td>{{ column.index_name }}</td>
                                 <td>{{ column.index_options }}</td>
-                                <td>{{ column.index_type }}</td>
-                                <td>{{ column.type }}</td>
                                 <td>
-                                    <a href="#" class="btn btn-sm btn-danger pull-right removeModalProcess">
-                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    {{ column.index_type }}
+                                </td>
+                                <td>
+                                    {% if column.type == 'partition_key' %}
+                                        <i class="fa fa-key"></i>
+                                    {% elseif column.type == 'clustering_key' %}
+                                        <i class="fa fa-hand-o-down"></i>
+                                    {% else %}
+                                        <i class="fa fa-circle-o"></i>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    <a href="#" class="btn btn-sm btn-warning pull-right">
+                                        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                     </a>
                                 </td>
                             </tr>
                         {% endfor %}
-                        <tr>
-                            <td>
-                                <a class="btn btn-success" href="#" role="button" data-toggle="modal" data-target="#addKeyspaceModal">Add</a>
-                            </td>
-                        </tr>
                         </tbody>
                     </table>
+
+                    <a class="btn btn-success" href="#" role="button" data-toggle="modal" data-target="#addKeyspaceModal">Add</a>
                 </div>
             </div>
 
