--- a/src/AppBundle/Resources/views/clusters/index.html.twig
+++ b/src/AppBundle/Resources/views/clusters/index.html.twig
@@ -6,7 +6,8 @@
         <ul class="list-group">
             {% for cluster in clusters %}
                 <li class="list-group-item">
-                    <h4>{{ cluster }}</h4>
+                    {% set clusterSplit = cluster|split(':') %}
+                    <h4>{{ clusterSplit[0] }} : {{ clusterSplit[1] }} <small>v{{ clusterSplit[2] }}</small></h4>
                     <hr />
                     <div class="btn-group" role="group" aria-label="ClusterControl">
                         <a class="btn btn-default" href="{{ path('keyspaces', { 'cluster': cluster }) }}">Connect</a>
@@ -36,6 +37,14 @@
                         <div class="form-group">
                             <label for="port">Port</label>
                             <input type="number" class="form-control" name="port" id="port" value="9042">
+                        </div>
+                        <div class="form-group">
+                            <label for="version">Version</label>
+                            <select name="version" id="version" class="form-control">
+                                {% for cassandraVersion in cassandraVersions %}
+                                    <option value="{{ cassandraVersion }}">{{ cassandraVersion }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </form>
                 </div>
