--- a/src/AppBundle/Resources/views/columns/index.html.twig
+++ b/src/AppBundle/Resources/views/columns/index.html.twig
@@ -55,6 +55,10 @@
                                     {% endif %}
                                 </td>
                                 <td>
+                                    <a href="#" class="btn btn-sm btn-danger pull-right">
+                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    </a>
+                                    &nbsp;
                                     <a href="#" class="btn btn-sm btn-warning pull-right">
                                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                     </a>
